kubernetes/apps/production/drone/server/server-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-server
  namespace: drone-ci
  labels:
    app: drone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone
  template:
    metadata:
      labels:
        app: drone
    spec:
      containers:
        - name: drone
          image: drone/drone:2
          ports:
            - containerPort: 80
            - containerPort: 443
          resources:
            requests:
              cpu: 50m
              memory: 75Mi
            limits:
              cpu: 100m
              memory: 200Mi
          volumeMounts:
            - name: drone-data
              mountPath: /data
      volumes:
        - name: drone-data
          persistentVolumeClaim:
            claimName: drone-pvc
