kubernetes/apps/production/drone/server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: drone-service
  namespace: drone-ci
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app: drone
